scripts/src/02-prometheus/05-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: prometheus-route
  namespace: g-monitoring-ns
  labels:
    name: prometheus-route
    app: prometheus-app
    project: g-monitoring-project
    operated-prometheus: "true"
spec:
  path: /
  to:
    kind: Service
    name: prometheus-operated
    weight: 100
  port:
    targetPort: web
  wildcardPolicy: None
